src/styles/_stream.scss
/* ... */
.stream-container {
  height: 100%;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.stream_enabled {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 99;

  &:before,
  &:after {
    position: absolute;
    pointer-events: none;
    left: 0;
    right: 0;
    opacity: 0.2;
    content: "";
    z-index: 100;
  }

  &:before {
    top: 0;
    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, transparent 100%);

    @include media-breakpoint-up($desktop-breakpoint) {
      height: 75px;
    }
  }

  &:after {
    bottom: 0;
    background: linear-gradient(360deg, rgba(0, 0, 0, 1) 0%, transparent 100%);

    @include media-breakpoint-up($desktop-breakpoint) {
      height: 80px;
    }
  }
}

.stream-video-container {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: #000;
  z-index: 0;

  video {
    width: 100%;
    height: 100%;
    @include media-breakpoint-down($desktop-breakpoint) {
      height: auto;
      max-height: 100%;
    }

    // opacity: 0.6;

    .stream_enabled & {
      opacity: 1;
    }
  }

  &.mirror-reflection {

    video {
      transform: rotateY(180deg);
      -webkit-backface-visibility: visible;
      backface-visibility: visible;
      transform: scaleX(-1);
    }
  }
}

.stream {
  position: relative;
  z-index: 99;
  flex: 1;

  &:after {

    .stream_enabled & {
      content: none;
    }
  }

  .change-devices {

    .stream_enabled & {
      display: none;
    }

    &.top {

      @include media-breakpoint-up($desktop-breakpoint) {
        display: none;
      }
    }
  }

  .device-select {
    display: none;
  }

  #devices {
    width: 100%;
    display: flex;
    z-index: 2;

    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
      justify-content: center;
    }

    .stream_enabled & {
      display: none;
    }
  }

  &-author {
    display: flex;
    align-items: center;
    align-content: center;
    z-index: 1;
    max-width: 40%;
    width: 100%;

    @include media-breakpoint-up($desktop-breakpoint) {
      margin-top: 5px;
    }

    .user-name {
      color: #fff;
      font-size: 15px;
      margin-left: 14px;
      max-width: calc(100% - 54px);

      a {
        color: inherit;
        font-weight: 500;
        display: block;
      }
    }
  }
}

#stream-timer {
  position: absolute;
  top: 15px;
  left: 50%;
  transform: translate(-50%, 0);
  font-weight: 500;
  color: #fff;
  z-index: 3;

  @include media-breakpoint-up($desktop-breakpoint) {
    font-size: 17px;
    top: 20px;
  }

  .stream-viewer & {

    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
      top: 24px;
    }
  }
}

.stream-online-label {
  position: absolute;
  left: 15px;
  top: 15.5px;
  width: 36px;
  text-align: center;
  line-height: 18px;
  color: #fff;
  z-index: 3;
  border-radius: 1000px;
  text-transform: uppercase;
  background: $primary-color;
  font-size: 11px;
  font-weight: 500;

  @include media-breakpoint-up($desktop-breakpoint) {
    left: 20px;
    top: 20px;
    width: 40px;
    line-height: 20px;
  }

  .stream & {
    display: none;

    .stream_enabled & {
      display: block;
    }
  }
}
.stream-tipsGoalTitle {
  position: absolute;
  left: 15px;
  top: 65px;
  text-align: center;
  line-height: 18px;
  color: #fff;
  z-index: 3;
  border: 1px solid $primary-color;
  border-radius: 1000px;
  text-transform: uppercase;
  font-size: 11px;
  font-weight: 500;
  padding: 10px;
  &.obs {
    top: 120px;
    @include media-breakpoint-up($desktop-breakpoint) {
      top: 65px;
    }
  }

  @include media-breakpoint-up($desktop-breakpoint) {
    left: 20px;
    top: 65px;
    line-height: 20px;
  }

  .stream & {
    display: none;

    .stream_enabled & {
      display: block;
    }
  }
}

.stream-comments-wrapper {
  margin-bottom: 12px;
  z-index: 3;
  color: #fff;
  overflow: hidden;
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-end;
  align-content: flex-end;
  -webkit-mask-image: -webkit-gradient(
    linear,
    left top,
    left bottom,
    color-stop(0, transparent),
    color-stop(0.2, #000)
  );
  padding: 0;
  height: calc(100vh - 150px);

  @include media-breakpoint-up($desktop-breakpoint) {
    height: calc(100vh - 170px);
  }

  &.m-with-amount-form {

    @include media-breakpoint-up($desktop-breakpoint) {
      height: calc(100vh - 230px);
    }
  }

  .stream & {
    display: none;

    .stream_enabled & {
      display: flex;
      align-content: flex-end;
      align-items: flex-end;
    }
  }
}

.stream-comments-show-all{
  text-align: center;
  color: #fff;
  font-size: 12px;
  cursor: pointer;
  padding: 10px 0;
}

.comments-list-scrolling {
  position: absolute;
  max-height: 100%;
  bottom: 0;
  left: 0;
  right: 0;
  padding-right: 14px;
  background-color: rgba(0,0,0,.2);
}

.comments-list-observer {
  width: 100%;
  height: 1px;
}

.stream-message {
  width: 100%;
  padding: 8px 3px 3px;

  @include media-breakpoint-up($desktop-breakpoint) {
    padding-top: 11px;
  }

  &__head {
    margin-top: 3px;
    max-width: calc(100% - 30px);
  }

  .comment-body {
    padding-right: 0;
  }

  .btn-icon {
    cursor: pointer;
  }
}


.stream-forms {
  position: absolute;
  left: 15px;
  bottom: 54px;
  z-index: 2;
  right: 15px;

  @include media-breakpoint-up($desktop-breakpoint) {
    left: 20px;
    bottom: 67px;
    width: 370px;
    right: auto;
  }
}

.form-comments {

  &__wrapper {
    position: relative;
  }

  &__input {
    background: rgba(#000, 0.2);
    color: #fff;
    padding: 10px 45px 9px 17px;
    border: 1px solid rgba(255, 255, 255, .2);
    height: 40px;
  }
}
/* ... */

